Rolled back to Java 11 as 17 is not supported with core22